* Optimization: now using multiple threads to transcode files for asynchronous download of studies archive.
* New configuration "KeepAliveTimeout" with a default value of 1 second.
* ResourceModification jobs (/modify + /anonymize) can now use multiple threads to speed up processing
  - New configuration "JobsEngineThreadsCount.ResourceModification" to configure the number of threads.

REST API
--------

* Loosen the sanity checks for DICOM modifications, if "Force" option is given:
  - allow modification of PatientID at study level
  - allow modification of PatientID, StudyInstanceUID at series level
  - allow modification of PatientID, StudyInstanceUID, SeriesInstanceUID at instance level
  - allow modification of a patient without changing her PatientID
  Added sanity checks for modifications to make sure the user preserves the DICOM model when modifying high level tags.
    E.g. if you modify the PatientID at study level, also make sure to modify all other Patient related
    tags (PatientName, PatientBirthDate, ...)
* Automatically reconstruct the modified resources at the end of the DICOM modifications job to ensure
  improved consistency of the DICOM model.
* If specifying 'Transcode' option to /modify or /anonymize, this value will take over the 'IngestTranscoding'
  global configuration
* Allow the HTTP server to return responses > 2GB (fixes asynchronous download of zip studies > 2GB)
* /modalities/.../store now accepts "CalledAet", "Host", "Port" to override the modality configuration 
  from the configuration file for a specific operation.
* /tools/metrics-prometheus: added orthanc_last_change and orthanc_up_time_s
* Tolerance for "image/jpg" MIME type instead of "image/jpeg" in /tools/create-dicom
* /system: added MaximumStorageMode and MaximumStorageSize

Plugins
-------

* Added a "header" argument to all OrthancPeers::DoPost, DoPut, ... in the "OrthancPluginCppWrapper"
* Added "OrthancPluginCreateJob2()" in the plugin SDK to avoid