@@ -12,6 +12,10 @@ General
 * New configuration "KeepAliveTimeout" with a default value of 1 second.
 * ResourceModification jobs (/modify + /anonymize) can now use multiple threads to speed up processing
   - New configuration "JobsEngineThreadsCount.ResourceModification" to configure the number of threads.
+* Introduced a new Housekeeper thread in Orthanc (different from the Housekeeper sample plugin).  This thread
+  regularly try to give back memory that Orthanc no longer uses to the system.  This reduces the overall memory
+  consumption however, only the memory at the end of a memory arena is given back to the system.  Fragmented memory
+  is not given back and therefore, the memory consumption may still stay high.
 
 REST API
 --------
